--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="index.html"><img src="images/TECH SIGN LOGO.png" alt="#" /></a>
+                              <a href="index.html"><img src="images/TECHSIGN W.png" alt="#" /></a>
                            </div>
                         </div>
                      </div>
@@ -58,18 +58,20 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
-                              <li class="nav-item ">
+                              <li class="nav-item active">
                                  <a class="nav-link" href="index.html"> Home  </a>
                               </li>
-                              <li class="nav-item active">
+                              <li class="nav-item">
                                  <a class="nav-link" href="about.html">About</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="products.html">Products </a>
                               </li>
+                              <!--
                               <li class="nav-item">
                                  <a class="nav-link" href="blog.html">Gallery</a>
                               </li>
+                              -->
                               <li class="nav-item">
                                  <a class="nav-link" href="contact.html">Contact</a>
                               </li>
@@ -91,14 +93,88 @@
       </header>
       <!-- end header inner -->
       <!-- end header -->
- 
+      
+      <!-- choose  section -->
+      <div class="choose ">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-8">
+                  <div class="titlepage">
+                     <h2>Why Choose Us? </h2>
+                     <p>Signs can identify and increase the sales of a business. </p>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="container-fluid">
+            <div class="row d_flex">
+               <div class="col-xl-7 col-lg-7 col-md-12 col-sm-12">
+                  <div class="padding_with">
+                     <div class="row">
+                        <div class="col-md-6 padding_bottom">
+                           <div class="choose_box">
+                              <i><img src="images/i1.png" alt="#"/></i>
+                              <div class="choose_text">
+                                 <h3>Excellent Service</h3>
+                                 <p>Precise servo motor system to measure accurate dimension of letters</p>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="col-md-6 padding_bottom">
+                           <div class="choose_box">
+                              <i><img src="images/i2.png" alt="#"/></i>
+                              <div class="choose_text">
+                                 <h3>Clean Working</h3>
+                                 <p>High quality of resin channel letters by vacuum defoamation</p>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="col-md-6 padding_bottom2">
+                           <div class="choose_box">
+                              <i><img src="images/i3.png" alt="#"/></i>
+                              <div class="choose_text">
+                                 <h3>Quality And Reliability</h3>
+                                 <p>Stable and perfect mixing ratio of liquid resin</p>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="col-md-6">
+                           <div class="choose_box">
+                              <i><img src="images/i4.png" alt="#"/></i>
+                              <div class="choose_text">
+                                 <h3>Expert Engineer</h3>
+                                 <p>Graduated Mechanical Engineering in Georgia Institute of Technology and Specialized in Leading High Technology Sign Manufacture System and Solution</p>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-xl-5 col-lg-5 col-md-12 col-sm-12">
+                  <div class="choose_img">
+                     <!-- 칵테일 포도 -->
+                     <figure><img src="images/CNC Router.JPG" alt="#"/></figure>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="container">
+            <div class="row">
+               <div class="col-md-5">
+                  <a class="read_more" href="#">Read More</a>
+               </div>
+            </div>
+         </div>
+      </div>
+      </div>
+      <!-- end choose  section -->
       <!-- about -->
       <div class="about">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>People Says About Tech Sign</h2>
+                     <h2>Technology About Tech Sign</h2>
                      
                   </div>
                </div>
@@ -118,9 +194,14 @@
                                  <div class="row">
                                     <div class="col-md-12">
                                        <div class="test_box">
-                                          <i><img src="images/p1.png" alt="#"/></i>
-                                          <h4>Andrew Du</h4>
-                                          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,</p>
+                                          <i><img src="images/SLB3000.jpg" alt="#"/></i>
+                                          <h4>Supreme Letter Bender</h4>
+                                          <p>- Automatic bend and V-cut all kinds of metal materials like Aluminum profile, Stainless steel(Gavanized steel), and etc..<br>
+                                             - Precise servo motor system to measure accurate dimension of letters.<br>
+                                             - Semi-permanent cutting materials(blade) and consumable parts<br>
+                                             - Simple software formation and easy to learn operating program.<br>
+                                             - Special system for materials moving and bending.<br>
+                                             - Strong machine body by thermal processing and high quality of components</p>
                                        </div>
                                     </div>
                                  </div>
@@ -133,9 +214,16 @@
                                  <div class="row">
                                     <div class="col-md-12">
                                        <div class="test_box">
-                                          <i><img src="images/p2.jpg" alt="#"/></i>
-                                          <h4>Daniel Williams</h4>
-                                          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,</p>
+                                          <i><img src="images/CNC V Cut.JPG" alt="#"/></i>
+                                          <h4>CNC V-CUT</h4>
+                                          <p>- Easy operation and low malfunction.<br>
+                                             - Save manufacturing time and working cost.<br>
+                                             - All kinds of sign materials applied.<br>
+                                             - User-friendly design and install small working area.<br>
+                                             - Multi Language and operating by simple software.<br>
+                                             - Strong machine body by thermal processing and high quality of components<br>
+                                             - All manufacturing process of V800 made in Korea.<br>
+                                             - Making side view(holes) of LED channel letter(punching option).</p>
                                        </div>
                                     </div>
                                  </div>
@@ -148,9 +236,14 @@
                                  <div class="row">
                                     <div class="col-md-12">
                                        <div class="test_box">
-                                          <i><img src="images/p3.jpg" alt="#"/></i>
-                                          <h4>Jenny Park</h4>
-                                          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,</p>
+                                          <i><img src="images/LaserCuttingMachine.JPG" alt="#"/></i>
+                                          <h4>Laser Cutting</h4>
+                                          <p>- Easy operation and low malfunction.<br>
+                                             - Save manufacturing time and working cost.<br>
+                                             - All kinds of sign materials applied.<br>
+                                             - Multi Language and operating by simple software.<br>
+                                             - Strong machine body by thermal processing and high quality of components<br>
+                                             </p>
                                        </div>
                                     </div>
                                  </div>
@@ -173,8 +266,8 @@
       </div>
       <!-- end about -->
       </div>
-      <!--  footer -->
-      <footer id="contact">
+       <!--  footer -->
+       <footer id="contact">
          <div class="footer">
             <div class="container">
                <div class="row">
@@ -217,7 +310,7 @@
                   -->
                    <div class="col-md-3 border_right">
                      <ul class="location_icon">
-                        <li><a href="https://maps.app.goo.gl/MfSzaPDt4zGPYB989"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locatins</li>
+                        <li><a href="https://maps.app.goo.gl/MfSzaPDt4zGPYB989"><i class="fa fa-map-marker" aria-hidden="true"></i></a>100 Pinnacle Way STE 190, Norcross, GA 30071</li>
                         <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +1 678-549-3432</li>
                         <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>jay.techsign@gmail.com</li>
                      </ul>
@@ -237,11 +330,13 @@
                   <div class="col-md-3 border_right">
                      <h3>Menus</h3>
                      <ul class="link">
-<li><a href="index.html">Home</a></li>                             
-<li><a href="about.html">About</a></li>                                                     
-<li><a href="products.html">Products</a></li>                             
-<li><a href="blog.html">Gallery</a></li>
-<li><a href="contact.html">Contact</a></li>
+                     <li><a href="index.html">Home</a></li>                             
+                     <li><a href="about.html">About</a></li>                                                     
+                     <li><a href="products.html">Products</a></li>
+                     <!--                             
+                     <li><a href="blog.html">Gallery</a></li>
+                     -->
+                     <li><a href="contact.html">Contact</a></li>
                      </ul>
                   </div>
                   <!--
