--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,7 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="index.html"><img src="images/TECH SIGN LOGO.png" alt="#" /></a>
+                              <a href="index.html"><img src="images/TECHSIGN W.png" alt="#" /></a>
                            </div>
                         </div>
                      </div>
@@ -58,7 +58,7 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
-                              <li class="nav-item">
+                              <li class="nav-item active">
                                  <a class="nav-link" href="index.html"> Home  </a>
                               </li>
                               <li class="nav-item">
@@ -67,9 +67,11 @@
                               <li class="nav-item">
                                  <a class="nav-link" href="products.html">Products </a>
                               </li>
-                              <li class="nav-item active">
+                              <!--
+                              <li class="nav-item">
                                  <a class="nav-link" href="blog.html">Gallery</a>
                               </li>
+                              -->
                               <li class="nav-item">
                                  <a class="nav-link" href="contact.html">Contact</a>
                               </li>
@@ -100,7 +102,7 @@
                <div class="col-md-8">
                   <div class="titlepage">
                      <h2>Why Choose Us? </h2>
-                     <p>there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined  </p>
+                     <p>Signs can identify and increase the sales of a business. </p>
                   </div>
                </div>
             </div>
@@ -112,37 +114,37 @@
                      <div class="row">
                         <div class="col-md-6 padding_bottom">
                            <div class="choose_box">
-                              <i><img src="images/icon1.png" alt="#"/></i>
+                              <i><img src="images/i1.png" alt="#"/></i>
                               <div class="choose_text">
                                  <h3>Excellent Service</h3>
-                                 <p>It is a long established fact that a reader will be distracted by the readable content of a</p>
+                                 <p>Precise servo motor system to measure accurate dimension of letters</p>
                               </div>
                            </div>
                         </div>
                         <div class="col-md-6 padding_bottom">
                            <div class="choose_box">
-                              <i><img src="images/icon2.png" alt="#"/></i>
+                              <i><img src="images/i2.png" alt="#"/></i>
                               <div class="choose_text">
                                  <h3>Clean Working</h3>
-                                 <p>It is a long established fact that a reader will be distracted by the readable content of a</p>
+                                 <p>High quality of resin channel letters by vacuum defoamation</p>
                               </div>
                            </div>
                         </div>
                         <div class="col-md-6 padding_bottom2">
                            <div class="choose_box">
-                              <i><img src="images/icon3.png" alt="#"/></i>
+                              <i><img src="images/i3.png" alt="#"/></i>
                               <div class="choose_text">
                                  <h3>Quality And Reliability</h3>
-                                 <p>It is a long established fact that a reader will be distracted by the readable content of a</p>
+                                 <p>Stable and perfect mixing ratio of liquid resin</p>
                               </div>
                            </div>
                         </div>
                         <div class="col-md-6">
                            <div class="choose_box">
-                              <i><img src="images/icon4.png" alt="#"/></i>
+                              <i><img src="images/i4.png" alt="#"/></i>
                               <div class="choose_text">
-                                 <h3>Expert Farmer</h3>
-                                 <p>It is a long established fact that a reader will be distracted by the readable content of a</p>
+                                 <h3>Expert Engineer</h3>
+                                 <p>Graduated Mechanical Engineering in Georgia Institute of Technology and Specialized in Leading High Technology Sign Manufacture System and Solution</p>
                               </div>
                            </div>
                         </div>
@@ -152,7 +154,7 @@
                <div class="col-xl-5 col-lg-5 col-md-12 col-sm-12">
                   <div class="choose_img">
                      <!-- 칵테일 포도 -->
-                     <figure><img src="images/SLB3000.jpg" alt="#"/></figure>
+                     <figure><img src="images/CNC Router.JPG" alt="#"/></figure>
                   </div>
                </div>
             </div>
@@ -168,8 +170,8 @@
       </div>
       <!-- end choose  section -->
 
-      <!--  footer -->
-      <footer id="contact">
+       <!--  footer -->
+       <footer id="contact">
          <div class="footer">
             <div class="container">
                <div class="row">
@@ -212,7 +214,7 @@
                   -->
                    <div class="col-md-3 border_right">
                      <ul class="location_icon">
-                        <li><a href="https://maps.app.goo.gl/MfSzaPDt4zGPYB989"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locatins</li>
+                        <li><a href="https://maps.app.goo.gl/MfSzaPDt4zGPYB989"><i class="fa fa-map-marker" aria-hidden="true"></i></a>100 Pinnacle Way STE 190, Norcross, GA 30071</li>
                         <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +1 678-549-3432</li>
                         <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>jay.techsign@gmail.com</li>
                      </ul>
@@ -232,11 +234,13 @@
                   <div class="col-md-3 border_right">
                      <h3>Menus</h3>
                      <ul class="link">
-<li><a href="index.html">Home</a></li>                             
-<li><a href="about.html">About</a></li>                                                     
-<li><a href="products.html">Products</a></li>                             
-<li><a href="blog.html">Gallery</a></li>
-<li><a href="contact.html">Contact</a></li>
+                     <li><a href="index.html">Home</a></li>                             
+                     <li><a href="about.html">About</a></li>                                                     
+                     <li><a href="products.html">Products</a></li>
+                     <!--                             
+                     <li><a href="blog.html">Gallery</a></li>
+                     -->
+                     <li><a href="contact.html">Contact</a></li>
                      </ul>
                   </div>
                   <!--
