--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="index.html"><img src="images/TECH SIGN LOGO.png" alt="#" /></a>
+                              <a href="index.html"><img src="images/TECHSIGN W.png" alt="#" /></a>
                            </div>
                         </div>
                      </div>
@@ -58,7 +58,7 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
-                              <li class="nav-item">
+                              <li class="nav-item active">
                                  <a class="nav-link" href="index.html"> Home  </a>
                               </li>
                               <li class="nav-item">
@@ -67,10 +67,12 @@
                               <li class="nav-item">
                                  <a class="nav-link" href="products.html">Products </a>
                               </li>
+                              <!--
                               <li class="nav-item">
                                  <a class="nav-link" href="blog.html">Gallery</a>
                               </li>
-                              <li class="nav-item active">
+                              -->
+                              <li class="nav-item">
                                  <a class="nav-link" href="contact.html">Contact</a>
                               </li>
                               <!--
@@ -93,8 +95,8 @@
       <!-- end header -->
      
      
-      <!--  footer -->
-      <footer id="contact">
+       <!--  footer -->
+       <footer id="contact">
          <div class="footer">
             <div class="container">
                <div class="row">
@@ -137,7 +139,7 @@
                   -->
                    <div class="col-md-3 border_right">
                      <ul class="location_icon">
-                        <li><a href="https://maps.app.goo.gl/MfSzaPDt4zGPYB989"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locatins</li>
+                        <li><a href="https://maps.app.goo.gl/MfSzaPDt4zGPYB989"><i class="fa fa-map-marker" aria-hidden="true"></i></a>100 Pinnacle Way STE 190, Norcross, GA 30071</li>
                         <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +1 678-549-3432</li>
                         <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>jay.techsign@gmail.com</li>
                      </ul>
@@ -157,11 +159,13 @@
                   <div class="col-md-3 border_right">
                      <h3>Menus</h3>
                      <ul class="link">
-<li><a href="index.html">Home</a></li>                             
-<li><a href="about.html">About</a></li>                                                     
-<li><a href="products.html">Products</a></li>                             
-<li><a href="blog.html">Gallery</a></li>
-<li><a href="contact.html">Contact</a></li>
+                     <li><a href="index.html">Home</a></li>                             
+                     <li><a href="about.html">About</a></li>                                                     
+                     <li><a href="products.html">Products</a></li>
+                     <!--                             
+                     <li><a href="blog.html">Gallery</a></li>
+                     -->
+                     <li><a href="contact.html">Contact</a></li>
                      </ul>
                   </div>
                   <!--
