--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="index.html"><img src="images/TECH SIGN LOGO.png" alt="#" /></a>
+                              <a href="index.html"><img src="images/TECHSIGN W.png" alt="#" /></a>
                            </div>
                         </div>
                      </div>
@@ -67,9 +67,11 @@
                               <li class="nav-item">
                                  <a class="nav-link" href="products.html">Products </a>
                               </li>
+                              <!--
                               <li class="nav-item">
                                  <a class="nav-link" href="blog.html">Gallery</a>
                               </li>
+                              -->
                               <li class="nav-item">
                                  <a class="nav-link" href="contact.html">Contact</a>
                               </li>
@@ -97,8 +99,9 @@
             <div class="row">
                <div class="col-md-12 ">
                   <div class="text-bg">
-                     <h1>SIGN COMPANY</h1>
-                     <p>Our professional staff can help design your sign and help define the material, size, color and location of your business sign based on the scope of your event or project.</p>
+                     <h1>TECH SIGNAGE</h1>
+                     <!-- Elevate your service standards for potential clients, employees or guests with Tech Sign -->
+                     <p>Attract business with eye-catching Tech Signs!</p>
                      <a href="#">Discover</a>
                   </div>
                </div>
@@ -138,12 +141,13 @@
             <div class="row d_flex">
                <div class="col-md-5">
                   <div class="titlepage">
-                     <h2>World’s Hottest Destinations <br>for Vegans</h2>
+                     <!-- 세계에서 가장 핫한 비즈니스 목적지 -->
+                     <h2>World’s Hottest Destinations <br>for Business</h2>
                   </div>
                </div>
                <div class="col-md-7">
                   <div class="hottest_box">
-                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined </p>
+                     <p>Tech Sign is a full service sign company that can help with any type of project, whether it is temporary signs for an occasion or a permanent stone monument for a business. We can help direct traffic and advertise for a community event or brand and create a street presence for a new business. Our professional staff design your sign and help define the material, size, color and location of your business sign based on the scope of your event or project. Most projects can be designed and produced within a week. More complex projects will require our expert advice and project management to meet completion deadlines. ​Whatever kind of sign you are looking for you came to the right place. ​Our vast range of products include exterior/interior illuminated and non-illuminated signs as well as banners, yard signs, vehicle graphics and much more. Whether you are a large chain or a small business, Tech Signs offers everything needed to complete your exterior and interior signage program, including the design, manufacture, project management, delivery and installation of your custom residential and commercial signage.</p>
                   </div>
                </div>
             </div>
@@ -159,7 +163,7 @@
                <div class="col-md-8">
                   <div class="titlepage">
                      <h2>Why Choose Us? </h2>
-                     <p>there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined  </p>
+                     <p>Signs can identify and increase the sales of a business. </p>
                   </div>
                </div>
             </div>
@@ -171,37 +175,37 @@
                      <div class="row">
                         <div class="col-md-6 padding_bottom">
                            <div class="choose_box">
-                              <i><img src="images/icon1.png" alt="#"/></i>
+                              <i><img src="images/i1.png" alt="#"/></i>
                               <div class="choose_text">
                                  <h3>Excellent Service</h3>
-                                 <p>It is a long established fact that a reader will be distracted by the readable content of a</p>
+                                 <p>Precise servo motor system to measure accurate dimension of letters</p>
                               </div>
                            </div>
                         </div>
                         <div class="col-md-6 padding_bottom">
                            <div class="choose_box">
-                              <i><img src="images/icon2.png" alt="#"/></i>
+                              <i><img src="images/i2.png" alt="#"/></i>
                               <div class="choose_text">
                                  <h3>Clean Working</h3>
-                                 <p>It is a long established fact that a reader will be distracted by the readable content of a</p>
+                                 <p>High quality of resin channel letters by vacuum defoamation</p>
                               </div>
                            </div>
                         </div>
                         <div class="col-md-6 padding_bottom2">
                            <div class="choose_box">
-                              <i><img src="images/icon3.png" alt="#"/></i>
+                              <i><img src="images/i3.png" alt="#"/></i>
                               <div class="choose_text">
                                  <h3>Quality And Reliability</h3>
-                                 <p>It is a long established fact that a reader will be distracted by the readable content of a</p>
+                                 <p>Stable and perfect mixing ratio of liquid resin</p>
                               </div>
                            </div>
                         </div>
                         <div class="col-md-6">
                            <div class="choose_box">
-                              <i><img src="images/icon4.png" alt="#"/></i>
+                              <i><img src="images/i4.png" alt="#"/></i>
                               <div class="choose_text">
-                                 <h3>Expert Farmer</h3>
-                                 <p>It is a long established fact that a reader will be distracted by the readable content of a</p>
+                                 <h3>Expert Engineer</h3>
+                                 <p>Graduated Mechanical Engineering in Georgia Institute of Technology and Specialized in Leading High Technology Sign Manufacture System and Solution</p>
                               </div>
                            </div>
                         </div>
@@ -211,7 +215,7 @@
                <div class="col-xl-5 col-lg-5 col-md-12 col-sm-12">
                   <div class="choose_img">
                      <!-- 칵테일 포도 -->
-                     <figure><img src="images/SLB3000.jpg" alt="#"/></figure>
+                     <figure><img src="images/CNC Router.JPG" alt="#"/></figure>
                   </div>
                </div>
             </div>
@@ -232,7 +236,7 @@
             <div class="row">
                <div class="col-md-6">
                   <div class="titlepage">
-                     <h2>Our Product</h2>
+                     <h2>Our Products</h2>
                   </div>
                </div>
             </div>
@@ -242,8 +246,8 @@
                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 padding_left0">
                   <div class="product_box">
                      <!-- 야채 -->
-                     <figure><img src="images/national.jpg" alt="#"/></figure>
-                     <h3 class="black">Logo & Sign</h3>
+                     <figure><img src="images/coffee.jpg" alt="#"/></figure>
+                     <h3>Multi Language W Back Light</h3>
                   </div>
                </div>
                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
@@ -263,8 +267,8 @@
                <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 padding_left0">
                   <div class="product_box">
                      <!-- 해바라기 -->
-                     <figure><img src="images/coffee.jpg" alt="#"/></figure>
-                     <h3>Back Light</h3>
+                     <figure><img src="images/haning banner.jpg" alt="#"/></figure>
+                     <h3 class="black">Haning Banner</h3>
                   </div>
                </div>
                <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 padding_right0">
@@ -284,7 +288,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>People Says About Tech Sign</h2>
+                     <h2>Technology About Tech Sign</h2>
                      
                   </div>
                </div>
@@ -304,9 +308,14 @@
                                  <div class="row">
                                     <div class="col-md-12">
                                        <div class="test_box">
-                                          <i><img src="images/p1.png" alt="#"/></i>
-                                          <h4>Andrew Du</h4>
-                                          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,</p>
+                                          <i><img src="images/SLB3000.jpg" alt="#"/></i>
+                                          <h4>Supreme Letter Bender</h4>
+                                          <p>- Automatic bend and V-cut all kinds of metal materials like Aluminum profile, Stainless steel(Gavanized steel), and etc..<br>
+                                             - Precise servo motor system to measure accurate dimension of letters.<br>
+                                             - Semi-permanent cutting materials(blade) and consumable parts<br>
+                                             - Simple software formation and easy to learn operating program.<br>
+                                             - Special system for materials moving and bending.<br>
+                                             - Strong machine body by thermal processing and high quality of components</p>
                                        </div>
                                     </div>
                                  </div>
@@ -319,9 +328,16 @@
                                  <div class="row">
                                     <div class="col-md-12">
                                        <div class="test_box">
-                                          <i><img src="images/p2.jpg" alt="#"/></i>
-                                          <h4>Daniel Williams</h4>
-                                          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,</p>
+                                          <i><img src="images/CNC V Cut.JPG" alt="#"/></i>
+                                          <h4>CNC V-CUT</h4>
+                                          <p>- Easy operation and low malfunction.<br>
+                                             - Save manufacturing time and working cost.<br>
+                                             - All kinds of sign materials applied.<br>
+                                             - User-friendly design and install small working area.<br>
+                                             - Multi Language and operating by simple software.<br>
+                                             - Strong machine body by thermal processing and high quality of components<br>
+                                             - All manufacturing process of V800 made in Korea.<br>
+                                             - Making side view(holes) of LED channel letter(punching option).</p>
                                        </div>
                                     </div>
                                  </div>
@@ -334,9 +350,14 @@
                                  <div class="row">
                                     <div class="col-md-12">
                                        <div class="test_box">
-                                          <i><img src="images/p3.jpg" alt="#"/></i>
-                                          <h4>Jenny Park</h4>
-                                          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,</p>
+                                          <i><img src="images/LaserCuttingMachine.JPG" alt="#"/></i>
+                                          <h4>Laser Cutting</h4>
+                                          <p>- Easy operation and low malfunction.<br>
+                                             - Save manufacturing time and working cost.<br>
+                                             - All kinds of sign materials applied.<br>
+                                             - Multi Language and operating by simple software.<br>
+                                             - Strong machine body by thermal processing and high quality of components<br>
+                                             </p>
                                        </div>
                                     </div>
                                  </div>
@@ -403,7 +424,7 @@
                   -->
                    <div class="col-md-3 border_right">
                      <ul class="location_icon">
-                        <li><a href="https://maps.app.goo.gl/MfSzaPDt4zGPYB989"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locatins</li>
+                        <li><a href="https://maps.app.goo.gl/MfSzaPDt4zGPYB989"><i class="fa fa-map-marker" aria-hidden="true"></i></a>100 Pinnacle Way STE 190, Norcross, GA 30071</li>
                         <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +1 678-549-3432</li>
                         <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>jay.techsign@gmail.com</li>
                      </ul>
@@ -423,11 +444,13 @@
                   <div class="col-md-3 border_right">
                      <h3>Menus</h3>
                      <ul class="link">
-<li><a href="index.html">Home</a></li>                             
-<li><a href="about.html">About</a></li>                                                     
-<li><a href="products.html">Products</a></li>                             
-<li><a href="blog.html">Gallery</a></li>
-<li><a href="contact.html">Contact</a></li>
+                     <li><a href="index.html">Home</a></li>                             
+                     <li><a href="about.html">About</a></li>                                                     
+                     <li><a href="products.html">Products</a></li>
+                     <!--                             
+                     <li><a href="blog.html">Gallery</a></li>
+                     -->
+                     <li><a href="contact.html">Contact</a></li>
                      </ul>
                   </div>
                   <!--
@@ -463,5 +486,5 @@
       <script src="js/custom.js"></script>
    </body>
 </html>
-<!-- 여기 업뎃해야함 -->
+
 
