--- a/products.html
+++ b/products.html
@@ -46,7 +46,7 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="index.html"><img src="images/TECH SIGN LOGO.png" alt="#" /></a>
+                              <a href="index.html"><img src="images/TECHSIGN W.png" alt="#" /></a>
                            </div>
                         </div>
                      </div>
@@ -58,18 +58,20 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
-                              <li class="nav-item ">
+                              <li class="nav-item active">
                                  <a class="nav-link" href="index.html"> Home  </a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="about.html">About</a>
                               </li>
-                              <li class="nav-item active">
+                              <li class="nav-item">
                                  <a class="nav-link" href="products.html">Products </a>
                               </li>
+                              <!--
                               <li class="nav-item">
                                  <a class="nav-link" href="blog.html">Gallery</a>
                               </li>
+                              -->
                               <li class="nav-item">
                                  <a class="nav-link" href="contact.html">Contact</a>
                               </li>
@@ -91,13 +93,12 @@
       </header>
       <!-- end header inner -->
       <!-- end header -->
-      <!-- product  section -->
       <div class="product">
          <div class="container">
             <div class="row">
                <div class="col-md-6">
                   <div class="titlepage">
-                     <h2>Our Product</h2>
+                     <h2>Our Products</h2>
                   </div>
                </div>
             </div>
@@ -107,8 +108,8 @@
                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 padding_left0">
                   <div class="product_box">
                      <!-- 야채 -->
-                     <figure><img src="images/national.jpg" alt="#"/></figure>
-                     <h3 class="black">Logo & Sign</h3>
+                     <figure><img src="images/coffee.jpg" alt="#"/></figure>
+                     <h3>Multi Language W Back Light</h3>
                   </div>
                </div>
                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
@@ -128,8 +129,8 @@
                <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 padding_left0">
                   <div class="product_box">
                      <!-- 해바라기 -->
-                     <figure><img src="images/coffee.jpg" alt="#"/></figure>
-                     <h3>Back Light</h3>
+                     <figure><img src="images/haning banner.jpg" alt="#"/></figure>
+                     <h3 class="black">Haning Banner</h3>
                   </div>
                </div>
                <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 padding_right0">
@@ -143,8 +144,8 @@
          </div>
       </div>
       <!-- end product  section -->
-      <!--  footer -->
-      <footer id="contact">
+       <!--  footer -->
+       <footer id="contact">
          <div class="footer">
             <div class="container">
                <div class="row">
@@ -187,7 +188,7 @@
                   -->
                    <div class="col-md-3 border_right">
                      <ul class="location_icon">
-                        <li><a href="https://maps.app.goo.gl/MfSzaPDt4zGPYB989"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locatins</li>
+                        <li><a href="https://maps.app.goo.gl/MfSzaPDt4zGPYB989"><i class="fa fa-map-marker" aria-hidden="true"></i></a>100 Pinnacle Way STE 190, Norcross, GA 30071</li>
                         <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +1 678-549-3432</li>
                         <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>jay.techsign@gmail.com</li>
                      </ul>
@@ -207,11 +208,13 @@
                   <div class="col-md-3 border_right">
                      <h3>Menus</h3>
                      <ul class="link">
-<li><a href="index.html">Home</a></li>                             
-<li><a href="about.html">About</a></li>                                                     
-<li><a href="products.html">Products</a></li>                             
-<li><a href="blog.html">Gallery</a></li>
-<li><a href="contact.html">Contact</a></li>
+                     <li><a href="index.html">Home</a></li>                             
+                     <li><a href="about.html">About</a></li>                                                     
+                     <li><a href="products.html">Products</a></li>
+                     <!--                             
+                     <li><a href="blog.html">Gallery</a></li>
+                     -->
+                     <li><a href="contact.html">Contact</a></li>
                      </ul>
                   </div>
                   <!--
